--- a/Coral_cover_analysis.Rmd
+++ b/Coral_cover_analysis.Rmd
@@ -6,9 +6,8 @@ output:
   html_document:
     toc: true
     theme: united
-  pdf_document:
-    toc: true
-    highlight: zenburn
+    code_folding: hide
+    
 ---
 
 ```{r setup, include=FALSE}
