--- a/Coral_cover_analysis.Rmd
+++ b/Coral_cover_analysis.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Coral cover analysis"
-author: "Mauricio Romero-Torres"
-date: "September 8, 2019"
+author: "Mauricio Romero-Torres and Ana Palacio-Castro"
+date: "September 16, 2019"
 output:
   html_document:
     toc: true
@@ -27,6 +27,72 @@ rm(list = ls())  # Remove all objects from memory
 
 ```
 
+##  Influence of most intense ENSO events on the coral cover in the ETP
+
+```{r}
+library(ggplot2)
+library(gridExtra)
+
+ENSO_colours<-c("blue", "red") # Type of anomaly
+my_colours<-c("#feb24c93", "#fb6a4a93", "#9e9ac893", "#a6d96a93") # Thermal regime
+
+theme_set (theme_classic() + theme(panel.grid.major = element_blank(),
+                              panel.grid.minor = element_blank(), 
+                              axis.line = element_line(colour = "black"),
+                              legend.position="none",
+                              axis.text.x = element_text(angle = 90, vjust = 0.5),
+                              plot.title = element_text(size=12, face="bold"),
+                              # panel.border = element_blank(), 
+                              panel.border = element_rect(colour = "black", fill=NA, size=1)))
+```
+
+
+# ENSO intensity in region 3 
+
+## Figure 1a
+
+```{r}
+
+# Plot ENOS 1971 - 2014
+  ENOS<-read.table(file="http://www.cpc.ncep.noaa.gov/data/indices/ersst5.nino.mth.81-10.ascii",header=TRUE)
+  ENOS1982_2014 <-subset(ENOS, YR>1968 & YR<2015)   # subset from 1970-2014
+  ENOS1982_2014$Date<-paste(ENOS1982_2014$YR, ENOS1982_2014$MON, sep = "-" )
+  ENOS1982_2014$Date<-paste(ENOS1982_2014$Date, "15", sep = "-" )
+  ENOS1982_2014$Date<-as.Date(ENOS1982_2014$Date, format = "%Y-%m-%d")
+  ENOS1982_2014$Anomaly <- factor(ifelse(ENOS1982_2014$ANOM.3 >=0, "Positive", "Negative"))
+  
+  interp <- approx(ENOS1982_2014$Date, ENOS1982_2014$ANOM.3, n=10000)
+  DataENSO <- data.frame(Date=interp$x, Anomaly3=interp$y)
+  DataENSO$Anomaly <- factor(ifelse(DataENSO$Anomaly3>=0, "Positive", "Negative"))
+      
+ENSO<-ggplot(data=DataENSO, aes(x=Date, y=Anomaly3))+
+  scale_x_continuous("",expand=c(0, 0))+
+  scale_y_continuous("SST anomaly (ºC) in Niño.3",expand=c(0, 0))+
+  geom_area(aes(fill=Anomaly), alpha=0.7)+
+  scale_fill_manual(values=ENSO_colours) + labs(title="a")+
+  geom_hline(yintercept=0, linetype="solid", color="black")+
+  geom_line(position = "identity", size=0.3)+
+  theme(axis.text.x=element_blank(),
+        axis.title.x=element_blank(),
+        axis.ticks.x = element_blank())+
+  annotate("text", x = 1900, y = 2.0, label = "El Niño \n72-73", size=3)+
+  annotate("text", x = 5600, y = 2.0, label = "El Niño \n82-83", size=3)+
+  annotate("text", x = 11100, y = 2.0, label = "El Niño \n97-98", size=3)
+ENSO
+
+# ENSOb<-ggplot(data=ENOS1982_2014, aes(x=Date, y=ANOM.3))+
+#   geom_hline(yintercept=0, linetype="solid", color="black")+
+#   scale_x_date("", limit=c(as.Date("1969-01-15"), as.Date("2014-12-31")),
+#                breaks= "12 months",
+#                      expand=c(0, 0))+
+#   scale_y_continuous("SST anomaly (ºC) in Niño.3",expand=c(0, 0))+
+#   geom_area(aes(fill=Anomaly))+
+#   geom_line(position = "identity")+
+#   scale_fill_manual(values=ENSO_colours) + labs(title="(a)")
+# ENSOb
+```
+
+
 # Coral Cover trends in the ETP
 
 ## Coral cover data
@@ -42,10 +108,14 @@ rm(list = ls())  # Remove all objects from memory
   cover$Region <- as.factor(cover$Region)               # convert to nominal factors
   cover$Location <- as.factor(cover$Location)
   cover$Site <- as.factor(cover$Site) 
-  cover$Country <- as.factor(cover$Country) 
+  cover$Country <- as.factor(cover$Country)
+  cover$Thermal_regime <- factor(cover$Thermal_regime, 
+                                    levels=c("Thermally_Stable", "Upwelling", "Galapagos_Islands","Seasonal"),
+                                    labels=c("Thermally stable", "Tropical upwelling", "Equatorial upwelling","Seasonal"))
   cover$Lat <- as.numeric(cover$Lat)
   cover$Lon <- as.numeric(cover$Lon)
-  cover$Year <- as.numeric((cover$Year)-1970)  # transform years to begin in 0
+  cover$Year <- as.numeric(cover$Year)
+  #cover$Year <- as.numeric((cover$Year)-1970)  # transform years to begin in 0
   summary(cover)
 ```
 
@@ -94,11 +164,13 @@ library(nlme)
 # Thermal_regime  = fixed factor
 ```
 
-* Model 1: All years 1970_2014 
+### Model 1: All years 1970_2014 
 
 ```{r}
 # All years 1970_2014 
-  model1 <- lme(Coral_cover ~ -1 + Thermal_regime * Year, random = ~1|Region, data=aggr.region) 
+  model1 <- nlme::lme(
+    Coral_cover ~ -1 + Thermal_regime * Year, random = ~1|Region, data=aggr.region)
+
   summary(model1)
   anova(model1)
   plot(ranef(model1))    # shows symmetrical scatter effects around zero
@@ -110,9 +182,33 @@ library(nlme)
   plot(model1, resid(., type = "p") ~ fitted(.) | Region, abline = 0)
   plot(model1, Coral_cover ~ fitted(.) | Region, abline = c(0,1))
   plot(model1, Coral_cover ~ fitted(.) | Thermal_regime, abline = c(0,1))
+  plot(model1, Coral_cover ~ fitted(.), abline = c(0,1))
+  
 ```
 
-* Model 2: Time-interval 1 - ENSO.73_82
+* Figure 1b
+
+```{r, warning=FALSE}
+#Using raw data (Only thermal regime is significant in model)
+
+Model1_plot <- ggplot(aggr.region, aes(x=Year, y=Coral_cover)) +
+  geom_boxplot(aes(group=Year), outlier.shape = NA) +
+  stat_boxplot(aes(group=Year), geom = 'errorbar')+
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", colour="deeppink")+
+  geom_smooth(span = 0.2, se=T, colour="aquamarine")+ 
+  #geom_point(aes(colour=Thermal_regime), alpha=0.5) + ylim(0,79) +
+  scale_y_continuous("Live coral cover (%)", limits = c(-2, 80), expand = c(0,0))+
+  scale_x_continuous("", limits = c(1969, 2015),
+                     breaks = seq(1970, 2014, by=5), expand = c(0,0))+
+  scale_color_manual(values=my_colours) + labs(title="b")+
+  #annotate("text", x = 1983, y = 70, label = "*", size=8)+
+  annotate("rect", xmin = 1982, xmax = 1983, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1997, xmax = 1998, ymin = 0, ymax = 80,  alpha = .2, fill="red")+
+  annotate("rect", xmin = 1972, xmax = 1973, ymin = 0, ymax = 80,  alpha = .2, fill="red")
+Model1_plot
+```
+
+### Model 2: Time-interval 1 - ENSO.73_82
 
 ```{r}
 # Time-interval 1 - ENSO.73_82
@@ -133,7 +229,27 @@ library(nlme)
     # GLMM model is adjusted, please warning with interpretation/generalization of results
 ```
 
- * Model 3: Time-interval 3 - ENSO.83_97
+* Figure 1c
+
+```{r, warning=FALSE}
+
+#Using raw data (the model is not significant)
+
+Model2_plot <- ggplot(ENSO.73_82, aes(x=Year, y=Coral_cover, colour=Thermal_regime)) +
+  geom_smooth(method = lm, se=FALSE, linetype = "dashed", alpha=1, size=2)+ 
+  geom_point(aes(fill=factor(Thermal_regime)),
+             shape = 21, colour = "black", size = 2, stroke = 0.3, alpha=0.5) + 
+  scale_y_continuous("Live coral cover (%)", limits = c(0, 80))+
+  scale_x_continuous("", limits = c(1973.7, 1982.3),
+                     breaks = seq(1974, 1982, by=2), expand = c(0.02,0.02))+
+  scale_fill_manual(values=my_colours) +
+  scale_colour_manual(values=my_colours)+
+  labs(title="c")
+Model2_plot
+
+```
+
+### Model 3: Time-interval 3 - ENSO.83_97
 
 ```{r}
 # Time-interval 3 - ENSO.83_97
@@ -149,9 +265,50 @@ library(nlme)
     plot(model3, resid(., type = "p") ~ fitted(.) | Region, abline = 0)
     plot(model3, Coral_cover ~ fitted(.) | Region, abline = c(0,1))
     plot(model3, Coral_cover ~ fitted(.) | Thermal_regime, abline = c(0,1))
+    
 ```
 
- * Model 4: Time-interval 4 - ENSO.98_14
+* Extract model 3 predicted values 
+
+```{r}
+# Create a new data frame for independent variables  
+NewData_3 <- expand.grid(Thermal_regime=unique(ENSO.83_97$Thermal_regime),
+                        #Region=unique(aggr.region$Region),
+                        Year=seq((min(ENSO.83_97$Year)), (max(ENSO.83_97$Year))))
+
+pred_3 <- predict(model3, newdata=NewData_3, level=0, asList = FALSE)
+
+#summary(pred) 
+#length(pred)
+```
+
+* Figure 1d
+
+```{r, warning=FALSE}
+
+# Using model data 
+    Model3b_plot <- ggplot(ENSO.83_97, aes(x=Year, y=Coral_cover, colour=Thermal_regime)) +
+          geom_point(aes(fill=factor(Thermal_regime)),
+          shape = 21, colour = "black", size = 2, stroke = 0.3, alpha=0.5) + 
+          scale_y_continuous(" ", limits = c(0, 80))+
+          scale_x_continuous("", limits = c(1982.7, 1997.3), 
+                             breaks = seq(1983, 1997, by=2), expand = c(0.02,0.02))+
+          geom_line(data=NewData_3, 
+                    aes(y=predict(model3, level=0, newdata=NewData_3)), size=2) +
+          theme(axis.text.y=element_blank(),  
+                    axis.title.y=element_blank(),
+                    legend.position = c(0.58, 1),
+                    legend.title=element_blank(), 
+                    legend.text=element_text(size=6))+
+          guides(col = guide_legend(nrow = 2))+
+          scale_fill_manual(values=my_colours) +
+          scale_colour_manual(values=my_colours)+
+          labs(title="d")
+    Model3b_plot
+
+```
+
+### Model 4: Time-interval 4 - ENSO.98_14
 
 ```{r}
 # Time-interval 4 - ENSO.98_14
@@ -175,7 +332,40 @@ library(nlme)
     anova(model4, model4b)  # ~ same results
 ```
 
- * Model 5: Time-interval 5 - ENSO.83_14
+* Extract model 4 predicted values 
+
+```{r}
+# Create a new data frame for independent variables  
+NewData_4 <- expand.grid(Thermal_regime=unique(ENSO.98_14$Thermal_regime),
+                        #Region=unique(aggr.region$Region),
+                        Year=seq((min(ENSO.98_14$Year)), (max(ENSO.98_14$Year))))
+
+pred_4 <- predict(model4, newdata=NewData_4, level=0)
+
+#summary(pred) 
+#length(pred)
+```
+
+* Figure 1e
+
+```{r, warning=FALSE}
+# Using model data 
+    Model4b_plot <- ggplot(ENSO.98_14, aes(x=Year, y=Coral_cover, colour=Thermal_regime)) +
+          geom_point(aes(fill=factor(Thermal_regime)),
+             shape = 21, colour = "black", size = 2, stroke = 0.3, alpha=0.5) +
+          scale_y_continuous(" ", limits = c(0, 80))+
+          scale_x_continuous("", limits = c(1997.7, 2014.3),
+                     breaks = seq(1998, 2014, by=2), expand = c(0.02,0.02))+
+          geom_line(data=NewData_4, aes(y=predict(model4, level=0, newdata=NewData_4)), size=2)+
+          theme(axis.text.y=element_blank(), axis.title.y=element_blank())+
+          scale_fill_manual(values=my_colours) +
+          scale_colour_manual(values=my_colours)+    
+          labs(title="e")
+    Model4b_plot
+    
+    ```
+
+### Model 5: Time-interval 5 - ENSO.83_14
 
 ```{r}
 # Time-interval 5 - ENSO.83_14  
@@ -194,7 +384,7 @@ library(nlme)
 
 ```
 
-###  Coral cover multiple comparison between years
+##  Coral cover multiple comparison between years
 * Adjusted p-values for all-pairwise comparisons in a one-way layout
 * Set up ANOVA model
 * Set up multiple comparisons object for all-pair comparisons
@@ -224,107 +414,14 @@ summary(m.comp_ENSO.83_97, test = univariate())
 
 ```
 
-# FIGURE 1. Illustration of the influence of most intense ENSO events on the coral cover in the ETP.
+### FIGURE 1
 
-```{r, message=FALSE}
-# Load packages 
-library(dplyr)
-library(RColorBrewer)
-library(plotrix)
-library(readr)
-library(reshape)
-library(data.table)
-```
+```{r, warning=FALSE}
 
-## FIGURE 1a. ENSO and Coral Cover
-
-```{r}
-# Plot ENOS 1971 - 2014
-    ENOS<-read.table(file="http://www.cpc.ncep.noaa.gov/data/indices/ersst5.nino.mth.81-10.ascii",header=TRUE)
-    ENOS1 <-ENOS[241:780, ]   # subset from 1982-2014
-    Year <- ENOS1$YR
-    Anom3 <- ENOS1$ANOM.3
-    YR_ANOM3 <- data.frame(cbind(Year,Anom3))  # Create a data frame with two columns
-    YR_ANOM3$Year <- as.numeric(YR_ANOM3$Year)
-    x <- YR_ANOM3                              # Funcion My Plot to graph ENSO
-    Year <- seq(
-       as.Date(sprintf("%s/1/1",min(x$Year))), 
-       as.Date(sprintf("%s/12/1",max(x$Year))), 
-       "months")
-   
-     myPlot = function(y, x, 
-                      colors=c("red","blue"), 
-                      xlab=deparse(substitute(x)),
-                      ylab=deparse(substitute(y)), ...)
-    {
-       n = length(x)
-       y.pos = y.neg = y
-       y.pos[y<0] = 0
-       y.neg[y>0] = 0
-       plot(y~x, type="n", xlab=xlab, ylab=ylab, ...)   # xaxt="n", Apague eje x
-       #grid()
-       polygon(c(x[1],x,x[n]),c(0,y.pos,0),col=colors[1],border=NA)
-       polygon(c(x[1],x,x[n]),c(0,y.neg,0),col=colors[2],border=NA)
-    } 
-
-# Boxplot coral cover all years 
-    cover <- read.csv("Data/Coral_Cover_ETP.csv", header=TRUE)      # Select file: Coral_Cover_ETP.csv
-    cover$Coral_cover <- as.numeric(cover$Coral_cover)  # convert to numeric variable
-    cover$Region <- as.factor(cover$Region)                # convert to nominal factors
-    cover$Location <- as.factor(cover$Location)
-    cover$Site <- as.factor(cover$Site) 
-    cover$Year <- as.numeric(cover$Year)
-    cover$Country <- factor(cover$Country) 
-
-# Hierarchically aggregate by Site, Location and Region.
-  # Agregate by site
-    aggr.site <- aggregate(Coral_cover ~ Year+Region+Location+Site+Period_ENOS+Thermal_regime,FUN=mean,data=cover)
-  # Agregate by location
-    aggr.location <- aggregate(Coral_cover~Year+Region+Location+Period_ENOS+Thermal_regime,FUN=mean,data=aggr.site)
-  # Aggregate by region
-    aggr.region <- aggregate(Coral_cover~Year+Region+Period_ENOS+Thermal_regime,FUN=mean,data=aggr.location)
-
-# Plot 
-  # dev.off() # reset parameters for plot
-  op <- par(mfcol=c(2,1), cex.main = 1.5, mar = c(0,5,0,2), oma=c(6,4,4,2), cex.lab = 1.5, cex.axis = 1,  las = 1)  # bty = "n",
-  myPlot(x$A,Year,ylab="",xlab="",axes = FALSE)  
-  axis(side=2, at=c(-2,-1,0,1,2), lwd = 0.5)
-  box(lwd = 0.5)
-  abline(h=0, lw = 0.4)  
-  boxplot (aggr.region$Coral_cover ~ aggr.region$Year,  
-           ylim = c(0, 100),           
-           axes = FALSE,
-           cex = 0.5,                 
-           lwd = 1,
-           pars = list(boxwex = 0.7, staplewex = 0.3, outwex = 0.3),
-           las = 2,                  
-           cex.axis=0.5,
-           xlab = "Year",
-           ylab = "") 
-  axis(2,lwd = 0.5)
-  box(lwd = 0.5)
-  x <-c(1:45)
-  YearsR = as.character(c(1970:2014))
-  axis(1,  at = x, labels = YearsR, lwd = 0.5, cex.axis=0.5, las = 2)
-
-```
-
-```{r}
-dev.off()
-```
-* Polynomial adjustment for all regions
-
-```{r, message=FALSE}
-library(ggplot2)
-
-theme_set (theme_bw() + theme(panel.border = element_blank(), 
-                              panel.grid.major = element_blank(),
-                              panel.grid.minor = element_blank(), 
-                              axis.line = element_line(colour = "black")))
-x = aggr.region$Year
-y = aggr.region$Coral_cover
-qplot(x,y, geom='smooth', span = 0.3)+ xlim(1970, 2014)+xlab("Year")+
-   ylab("Coral cover")+ylim(0,80)+ geom_point()
+Figure1<-grid.arrange(ENSO, Model1_plot, arrangeGrob(
+  Model2_plot, Model3b_plot, Model4b_plot, widths = c(3.9/12, 3.80/12, 4.30/12), ncol = 3),
+             nrow=3) 
+#ggsave(file="Fig1_V5.svg", plot=Figure1, width=7, height=7)
 
 ```
 
@@ -338,7 +435,7 @@ library(data.table)
 library(RColorBrewer)
 ```
 
-## FIGURE 2A. The sequence of yearly maximum DHW experienced by the best-represented coral reefs sites from 1982 to 2014
+## Yearly maximum DHW experienced by the best-represented coral reefs sites from 1982 to 2014
 
 * Select and transform DHW data
 
@@ -357,6 +454,8 @@ library(RColorBrewer)
   ts.Bahia_Banderas <- subset(dhw, dhw$Site == "Bahia_Banderas")          
 
 ```
+
+### FIGURE 2a
 
 * Plot max DHW in each location
 
@@ -462,7 +561,7 @@ r.squaredGLMM(model6)   #  returns the marginal and the conditional R2
 ```
 
 
-## FIGURE 2B: Relationship of coral cover rate of change and thermal stress
+### FIGURE 2B: Relationship of coral cover rate of change and thermal stress
 
 ```{r, message=FALSE}
 # Load packages
@@ -592,7 +691,7 @@ library(reshape2)
 library(RColorBrewer) 
 ```
 
-## FIGURE S2: a) Number of regions surveyed per year, b): Number of countries surveyed per year
+### FIGURE S2: a) Number of regions surveyed per year, b): Number of countries surveyed per year
 ```{r}
 # Barplot number of surveys per year
   obs_num = as.data.frame(table(cover$Year,cover$Region))    
@@ -670,7 +769,7 @@ legend( #"bottomright",
  dev.off() # reset parameters for next plot 
 ```
 
-## FIGURE S3: Variation in the live coral cover for 1970–2014 per thermal regime 
+### FIGURE S3: Variation in the live coral cover for 1970–2014 per thermal regime 
 
 Temporal variation in the live coral cover for 1970–2014. 
 * (a) Tropical upwelling regime. 
@@ -684,11 +783,13 @@ library(ggplot2)
 library(lemon)
 
 aggr.region$Thermal_regime<-factor(aggr.region$Thermal_regime, 
-                                      levels=c("Upwelling", "Seasonal", "Thermally_Stable", "Galapagos_Islands"), 
-                                      labels=c("(a)", "(b)", "(c)", "(d)"))
+                                  levels=c("Tropical upwelling", "Seasonal", 
+                                           "Thermally stable", "Equatorial upwelling"),
+                                  labels = c ("a", "b", "c", "d"))
+                                   
 summary(aggr.region$Thermal_regime)
 
-ggplot(aggr.region, aes(x=Year, y=Coral_cover)) + 
+FigureS3<-ggplot(aggr.region, aes(x=Year, y=Coral_cover)) + 
   theme_bw() + theme(panel.border = element_blank(),   # set ggplot to white background
                               panel.grid.major = element_blank(),
                               panel.grid.minor = element_blank(), 
@@ -696,8 +797,11 @@ ggplot(aggr.region, aes(x=Year, y=Coral_cover)) +
                               strip.background = element_blank(),
                               strip.text = element_text(face="bold",hjust = 0, vjust = -1))+
   geom_point()+ geom_smooth (span = 0.3) +
-  scale_x_continuous(limits=c(1970, 2014), expand = c(0.01, 0.01), "Year") +
-  scale_y_continuous(limits=c(-19, 91), expand = c(0, 0), "Coral cover") +
+  scale_x_continuous(limits=c(1970, 2014), 
+                     breaks = seq(1970, 2014, by=5),
+                     expand = c(0.01, 0.01), "Year") +
+  scale_y_continuous(limits=c(-19, 91), expand = c(0, 0), "Live coral cover (%)") +
   facet_wrap(Thermal_regime~., ncol=1, scales = "free_x", strip.position ="top")
-
+FigureS3
+#ggsave(file="FigureS3.svg", plot=FigureS3, width=6.69, height=6.69)
 ```
